fixed looping rollup

--- a/SvelteRazor/Pages/Index.cshtml
+++ b/SvelteRazor/Pages/Index.cshtml
@@ -4,9 +4,6 @@
     ViewData["Title"] = "Home page";
 }
 
-@* <svelte-app id="khalid" name="Khalid"></svelte-app> *@
-@* <svelte-app id="paul" name="Paul"></svelte-app> *@
-@* *@
-@* <div style="width: 300px"> *@
-@*     <svg-clock></svg-clock> *@
-@* </div> *@
+<a href="/Sandbox">
+    <button class="btn btn-accent">Go to Sandbox</button>
+</a>
