--- a/SvelteRazor/Pages/Shared/_Layout.cshtml
+++ b/SvelteRazor/Pages/Shared/_Layout.cshtml
@@ -35,33 +35,31 @@
 
     <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
 
-
         <tidy-navbar></tidy-navbar>
 
-
-        <div
-            hidden x-show="false"
-            class="container">
-            <a class="navbar-brand" asp-area="" asp-page="/Index">SvelteRazor</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                <ul class="navbar-nav flex-grow-1">
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
-                    </li>
-
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-page="/Sandbox">Sandbox</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
+        @* <div *@
+        @*     hidden x-show="false" *@
+        @*     class="container"> *@
+        @*     <a class="navbar-brand" asp-area="" asp-page="/Index">SvelteRazor</a> *@
+        @*     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent" *@
+        @*             aria-expanded="false" aria-label="Toggle navigation"> *@
+        @*         <span class="navbar-toggler-icon"></span> *@
+        @*     </button> *@
+        @*     <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between"> *@
+        @*         <ul class="navbar-nav flex-grow-1"> *@
+        @*             <li class="nav-item"> *@
+        @*                 <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a> *@
+        @*             </li> *@
+        @*             <li class="nav-item"> *@
+        @*                 <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a> *@
+        @*             </li> *@
+        @* *@
+        @*             <li class="nav-item"> *@
+        @*                 <a class="nav-link text-dark" asp-area="" asp-page="/Sandbox">Sandbox</a> *@
+        @*             </li> *@
+        @*         </ul> *@
+        @*     </div> *@
+        @* </div> *@
     </nav>
 </header>
 <div class="container">
@@ -76,8 +74,6 @@
 @*     </div> *@
 @* </footer> *@
 
-@* <script src="~/lib/jquery/dist/jquery.min.js"></script> *@
-@* <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script> *@
 <script src="~/js/build/bundle.js" asp-append-version="true"></script>
 
 @await RenderSectionAsync("Scripts", required: false)
