added some preprocessing support it won't work yet, just needs to be in the right place when tailwind compiles and .svelte files need to see the compiled styles.css file

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -2,8 +2,11 @@
 @model IndexModel
 @{
     ViewData["Title"] = "Home page";
+    var count = 5;
 }
 
 <a href="/Sandbox">
     <button class="btn btn-accent">Go to Sandbox</button>
 </a>
+
+<custom-counter count=@count></custom-counter>
