--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -26,41 +26,51 @@
 
     <!-- Alpine Core -->
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@@3.x.x/dist/cdn.min.js"></script>
-    @* <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css"/> *@
-    @* <link rel="stylesheet" href="~/css/site.css"/> *@
+
+    <link rel="stylesheet" href="~/css/site.css"/>
 </head>
 <body>
 <header>
 
 
+
+        <tidy-navbar>
     <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        
+        
+        <!-- <li><a href="/Sandbox">Sandbox</a><a href="/">Home</a></li> -->
+<div class="navbar bg-base-100">
+  <div class="navbar-start">
+    <div class="dropdown">
+      <div tabindex="0" role="button" class="btn btn-ghost btn-circle">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h7" /></svg>
+      </div>
+      <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
+        <li><a>Homepage</a></li>
+        <li><a>Portfolio</a></li>
+        <li><a>About</a></li>
+      </ul>
+    </div>
+  </div>
+  <div class="navbar-center">
+    <a class="btn btn-ghost text-xl">daisyUI</a>
+  </div>
+  <div class="navbar-end">
+    <button class="btn btn-ghost btn-circle">
+      <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" /></svg>
+    </button>
+    <button class="btn btn-ghost btn-circle">
+      <div class="indicator">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9" /></svg>
+        <span class="badge badge-xs badge-primary indicator-item"></span>
+      </div>
+    </button>
+  </div>
+</div>
 
-        <tidy-navbar></tidy-navbar>
-
-        @* <div *@
-        @*     hidden x-show="false" *@
-        @*     class="container"> *@
-        @*     <a class="navbar-brand" asp-area="" asp-page="/Index">SvelteRazor</a> *@
-        @*     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent" *@
-        @*             aria-expanded="false" aria-label="Toggle navigation"> *@
-        @*         <span class="navbar-toggler-icon"></span> *@
-        @*     </button> *@
-        @*     <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between"> *@
-        @*         <ul class="navbar-nav flex-grow-1"> *@
-        @*             <li class="nav-item"> *@
-        @*                 <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a> *@
-        @*             </li> *@
-        @*             <li class="nav-item"> *@
-        @*                 <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a> *@
-        @*             </li> *@
-        @* *@
-        @*             <li class="nav-item"> *@
-        @*                 <a class="nav-link text-dark" asp-area="" asp-page="/Sandbox">Sandbox</a> *@
-        @*             </li> *@
-        @*         </ul> *@
-        @*     </div> *@
-        @* </div> *@
     </nav>
+        </tidy-navbar>
+
 </header>
 <div class="container">
     <main role="main" class="pb-3">
