--- a/Pages/Sandbox/Index.cshtml
+++ b/Pages/Sandbox/Index.cshtml
@@ -6,7 +6,7 @@
 }
 
 <div>
-    <svelte-app name="Nick"></svelte-app>
+    <big-header name="Nick"></big-header>
 
     <div x-data="{ open: false }">
         <button class="btn btn-info" x-on:click="open = true">Expand</button>
@@ -25,6 +25,23 @@
     </div>
 
 </div>
+
+<section>
+     <options-panel id="5" options="{bar: true}" name="Language Options">
+            <p>template go here</p>
+        </options-panel>
+    
+        <h1>Without Svelte</h1>
+        <template x-for="[key, value] of Object.entries(options)">
+            <div class="mb-3">
+                <label class="form-label" :for="key"></label>
+                <span x-text="key">This is for debugging only and can be omitted</span>
+                <input type="checkbox" class="form-control toggle toggle-accent" :for="key">
+            </div>
+        </template>
+
+</section>
+
 
 <section class="flex w-1/3">
     <ul class="menu xl:menu-horizontal lg:min-w-max bg-base-200 rounded-box">
