--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -11,3 +11,12 @@
     display: none;
   }
 }
+
+/* flexies */
+
+.flex-stack {
+  flex: auto;
+  flex-direction: column;
+  justify-items: center;
+  align-items: center;
+}
