--- a/Pages/TPOT/Index.cshtml
+++ b/Pages/TPOT/Index.cshtml
@@ -1,6 +1,6 @@
 @page
 @using Microsoft.AspNetCore.Mvc.TagHelpers
-@model SvelteRazor.Pages.TPOT.Index
+@model Trash Stack.Pages.TPOT.Index
 
 @{
     // var Upload = Model.Upload;
