--- a/Pages/_ViewImports.cshtml
+++ b/Pages/_ViewImports.cshtml
@@ -1,4 +1,4 @@
-@using SvelteRazor
-@namespace SvelteRazor.Pages
+@using Trash Stack
+@namespace Trash Stack.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, Htmx.TagHelpers
