Finished base template, ready for deploy

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -9,10 +9,10 @@
 
 <section>
 
-<h2>Svelte Counter (Unstyled)</h2>
-<custom-counter count=@count></custom-counter>
-
-
+    <h2>Svelte Counter (Unstyled)</h2>
+    <custom-counter count={@count}></custom-counter>
+    <custom-counter count={42}></custom-counter>
+    <custom-counter></custom-counter>
 
 
 </section>
@@ -21,42 +21,40 @@
 <section id='next_steps_navigation'>
 
 
-<div class="hero min-h-screen bg-base-200">
-  <div class="hero-content text-center">
-    <div class="max-w-md">
-      <h1 class="text-5xl font-bold">Where to next?</h1>
+    <div class="hero min-h-screen bg-base-200">
+        <div class="hero-content text-center">
+            <div class="max-w-md">
+                <h1 class="text-5xl font-bold">Where to next?</h1>
+
+                <ul class="menu bg-base-200 lg:menu-horizontal rounded-box">
+                    <li>
+                        <a>
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6"/>
+                            </svg>
+                            Inbox
+                            <span class="badge badge-sm">99+</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a>
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"/>
+                            </svg>
+                            Jobs
+                            <span class="badge badge-sm badge-warning">NEW</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="/sandbox">
+                            Sandbox
+                            <span class="badge badge-xs badge-info"></span>
+                        </a>
+                    </li>
+                </ul>
 
 
-
-<ul class="menu bg-base-200 lg:menu-horizontal rounded-box">
-  <li>
-    <a>
-      <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6" /></svg>
-      Inbox
-      <span class="badge badge-sm">99+</span>
-    </a>
-  </li>
-  <li>
-    <a>
-      <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>
-      Updates
-      <span class="badge badge-sm badge-warning">NEW</span>
-    </a>
-  </li>
-  <li>
-    <a>
-        <a href="/Sandbox">
-             <button class="btn btn-accent">Go to Sandbox</button>
-         </a>
-
-      <span class="badge badge-xs badge-info"></span>
-    </a>
-  </li>
-</ul>
- 
-
+            </div>
+        </div>
     </div>
-  </div>
-</div>
 </section>
-
