--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -61,7 +61,7 @@
                     </div>
                 </div>
                 <div class="navbar-center">
-                    <a class="btn btn-ghost text-xl">SHATRD Stack Template</a>
+                    <a class="btn btn-ghost text-xl">TRASH Stack Template</a>
                 </div>
                 <div class="navbar-end">
                     <button class="btn btn-ghost btn-circle">
